manifests/openhab/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: openhab
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`openhab.pref.lcisp.it`)
      kind: Rule
      middlewares:
        - name: gzip-compress
          namespace: traefik
        #- name: headers-default@file
        #- name: default-sso@kubernetescrd
        #- name: openhabheaders
      services:
        - name: openhab
          port: 8080
